# concur-benchmarks

./: README.md  concur-benchmarks.cabal  stack.yaml
docs/: index.html
docs/benchmarks/bench.jsexe/: all.js  out.js  out.stats
docs/benchmarks/clickList.jsexe/: all.js  out.js  out.stats
src/: Bench.hs  ClickList.hs
