name:                concur-benchmarks
version:             0.1.0.0
synopsis:            Concur benchmarks
description:         Concur benchmarks
homepage:            https://github.com/ajnsit/concur-benchmarks
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           2017 (C) All Rights Reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ajnsit/concur-benchmarks

executable clickList
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             ClickList.hs
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , stm >= 2.4
                     , free >= 4.12
                     , concur-core
                     , concur-vdom
                     , ghcjs-vdom
                     , random
                     , vector
  default-language:    Haskell2010

  if impl(ghcjs)
    build-depends:     ghcjs-base
